0.72
- SOPORTE: para CAT10, client soporta el canal operativo.

0.71
- SOPORTE: para CAT10, se envían a cálculo de demoras los
  DETECTION y los SUC. Antes solo los DETECTION, pero durante
  mucho tiempo en aeropuertos pequeños no hay blancos.
- BUG: log_flush() después de log_printf en updatecalculations
  para ver el progreso cuando se usa --stdout con --mysql-xxxx
- BUG: áñade 10 microsegs antes de cada sendto para que la pila
  udp no tire los paquetes por overflow al enviar de fichero.

0.70
- SOPORTE reader_network: retry ftp upload once
- BUG: disable CURLOPT_FTP_USE_EPRT, so it works with new
  REDAN proxy/nat version
- BUG: disabled cat21 decoding, only support for v0.23, and
  now we are having v2.1_gccx and v0.26_lemd

0.69
- SOPORTE: define mysql host, port, user, passwd in commandline
- BUG: remove region from reader_rrd3 when exporting bds30
- BUG: now ftp transfers are active. Disabled EPASV/PASV.
- SOPORTE: added Fuerteventura in sacsic.c
- BUG: missing Fuerteventura PV in sacsic.c
- TODO: finish database storage of reader_rrd3

0.68beta6
- BUG: asterix_versions was disabled. fixed.

0.68beta5
- BUG: reader_rrd3 default timestamp was 0, return to
  seconds from midnight of current day.
- SOPORTE: added filtercat, to filter gps files by category.
- BUG: added Taborno in sacsic.c
- BUG: fixed Penas del Chache description, was using UTF8

0.68beta4
- SOPORTE: reader_rrd3 exports cat1, 48, 19 & 20 delays.
- SOPORTE: added source ip address to gps timestamp field.
- SOPORTE: reader_rrd3 exports bds3.0 to database.
- SOPORTE: reader_rr33 exports bds & delays to database.

0.68beta3
- SOPORTE: reader_rrd3 comienza a volcar en bbdd en el
minuto 00, y acaba en el ultimo minuto multiplo de 5. una
grabación que va de 00:00 a 04:03, vuelca datos desde
00:00 hasta 03:55. Como no ha llegado a 04:05, no se
vuelcan los correspondientes de 04:00 a 04:05, que irían en 04:00.

0.68beta2
- SOPORTE: delays in category 20 are now exported, in
both client & client_time.